fix grid on tablet version

--- a/_src/assets/scss/components/_aside.scss
+++ b/_src/assets/scss/components/_aside.scss
@@ -57,9 +57,64 @@
   width: 180px;
 }
 
+// TABLET & DESKTOP
 
+@media all and (min-width:768px){
+  .aside-contain-list {
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    grid-template-rows:45px 1fr 45px;
+    // grid-gap:0;
+    // justify-items: center;
+  }
+  .aside-title {
+    background: #f26002;
 
-.aside-detail{
+  }
 
-  // color: var(--white);
+  .aside-list0{
+    grid-column:1/4;
+    grid-row:1/2;
+  }
+  // .aside-list1 {
+  //   background:pink;
+  //   grid-column:1/2;
+  //   grid-row:2/3;
+  // }
+  .aside-list1 {
+    background:pink;
+    grid-column:1/2;
+    grid-row:2/3;
+  }
+  // .aside-list2 {
+  //   background:blue;
+  //   grid-column:2/3;
+  //   grid-row:2/3;
+  // }
+  .aside-list2 {
+    background:blue;
+    grid-column:2/3;
+    grid-row:2/3;
+  }
+  // .aside-list3 {
+  //   background:yellow;
+  //   grid-column:3/4;
+  //   grid-row:2/3;
+  // }
+  .aside-list3 {
+    background:yellow;
+    grid-column:3/4;
+    grid-row:2/3;
+  }
+
+  .aside-list4{
+    grid-column:1/4;
+    grid-row:3/4;
+  }
+
+  .aside-detail-button{
+    background:coral;
+    grid-column:1/4;
+    grid-row:3/4;
+  }
 }
